--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+@layer base {
+  html,
+  body {
+    background-color: #d9d9d9;
+    overflow-x: hidden;
+    width: 100%;
+  }
+}
